--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</section>
 <img class="utensilhos"scr="utesnilhos.jpg" alt="utensilhos">
+		<section class="mapa">
+			</section>
 		<section class="beneficios">
 			<h3 class="titulo-secundario">Benefícios</h3>
 
@@ -47,6 +49,9 @@
 			</ul>
 
 			<img src="beneficios.jpg" class="imagem-beneficios">
+			<div class="video">
+				<iframe>
+					</div>
             </section>
             </main>
         <footer>
