--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</section>
 		<section class="beneficios">
 			<h3 class="titulo-secundario">Benefícios</h3>
-
+		<div class="conteudo-beneficios">
 			<ul>
 				<li class="itens">Atendimento aos Clientes</li>
 				<li class="itens">Espaço diferenciado</li>
@@ -51,7 +51,7 @@
 				<li class="itens">Profissionais Qualificados</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagem-beneficios">
+			
 			<div class="video">
     				**add<iframe width="560" height="315" src="https://youtu.be/GnziZ-WcftE?si=Ixs0pZWPkqdzSU88" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
