--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 		<section class="mapa">
     			**add<h3 class="titulo-principal">Nosso estabelecimento</h3>
     			**add<p>Nosso estabelecimento está localizado no coração da cidade.</p>
-   			 **add<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			<div class="mapa-conteudo">
+			**add<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 		</section>
 		<section class="beneficios">
 			<h3 class="titulo-secundario">Benefícios</h3>
@@ -49,8 +50,8 @@
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
 				<li class="itens">Profissionais Qualificados</li>
-			</ul>
-
+			</ul>img scr="beneficios.jpg" class="imagem-beneficios">
+		</div>
 			
 			<div class="video">
     				**add<iframe width="560" height="315" src="https://youtu.be/GnziZ-WcftE?si=Ixs0pZWPkqdzSU88" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
