--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width">
         <title>Home - Barbearia Alura</title>
-
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
 	    
@@ -60,10 +59,10 @@
 		 </div>	
 			
 			<div class="video">
-    				<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    				<iframe width="100" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</section>
- </main> 
+        </main> 
         <footer>
             <img src="logo-branco.png">
             <p class="copyright">&copy; Copyright Dhiovanna Vicezni - 2024</p>
