--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </main> 
         <footer>
             <img src="logo-branco.png">
-            <p class="copyright">&copy; Copyright Dhiovanna Vicezni - 2024</p>
+            <p class="copyright">&copy; Copyright Dhiovanna Vicenzi - 2024</p>
         </footer>
     </body>
 </html>
